# zz-comm

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  comm_test.py  decoder.py  gnss_enc_dec.py  gnss_enc_dec_test.py
include/: board.h  boggle-api.h  common.h  solver.h  trie.h
source/: board.cpp  boggle-api.cpp  main.cpp  profile.cpp  solver.cpp  trie.cpp
test/: board-test.cpp  integration-boggle-api-test.cpp  integration-test.cpp  solver-test.cpp  test-main.cpp  trie-test.cpp
test/boards/: 250x250board.txt
test/dictionaries/: andrzej.txt  data1.txt
